# comfyui-faceless-node

./: .gitignore  README.md  __init__.py  download_models.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: image_face_swap_and_restore.json  preview_video_frames.json  video_face_swap_and_restore.json
faceless/: execution.py  face_helper.py  face_masker.py  face_store.py  ffmpeg.py  filesystem.py  image_helper.py  typing.py  vision.py
faceless/nodes/: globals.py  nodes_face_restore.py  nodes_face_swap.py  nodes_load_frames.py  nodes_load_image_url.py  nodes_load_video.py  nodes_load_video_images.py  nodes_load_video_url.py  nodes_merge_videos.py  nodes_remove_background.py  nodes_save_video.py  nodes_upload_video.py  nodes_video_face_restore.py  nodes_video_face_swap.py  nodes_video_remove_background.py
faceless/processors/: briarmbg.py  face_analyser.py  face_enhancer.py  face_restoration.py  face_swapper.py
web/: faceless.js
